--- a/index.html
+++ b/index.html
@@ -18,6 +18,72 @@
                         <img class="menu_logo" src="./assests/person.svg" alt="Sobre">
                         <p>Sobre</p>
                     </label>
+                    <span class="board">
+                        <header class="title">
+                            <span>S</span>OBRE
+                        </header>
+                        <main class="about">
+                            <article>
+                                <p>Meu nome é <span>Paulo Destro de Carvalho</span>, sou desenvolvedor especializado em
+                                    <span>Java e JavaScript</span>, com sólida experiência em desenvolvimento backend para
+                                    aplicações corporativas e integração de sistemas.</p>
+                                <p>Busco a formação em Análise de Sistemas e o possuo diversos cursos de especialização que
+                                    reforçam meu compromisso com aprendizado contínuo e boas práticas de desenvolvimento.
+                                </p>
+                                <p>Atuei em empresas de grande relevância no setor de tecnologia, como <span>PicPay, IBM e
+                                        Nanodata Serviços Online</span> , participando de projetos robustos voltados a
+                                    integração de sistemas, processamento de documentos fiscais, e soluções para
+                                    instituições financeiras de grande porte, como Bradesco e Santander.</p>
+                            </article>
+                        </main>
+                        <footer class="infos">
+                            <label class="infos_title">
+                                <span>T</span>ECNOLOGIAS
+                            </label>
+                            <ul class="info_items">
+                                <li class="item">
+                                    <img src="./assests/java-logo-black-and-white-1-removebg-preview.png"></img>
+                                    <p>Java</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/spring-boot.svg"></img>
+                                    <p>Spring Boot</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/postgres.png"></img>
+                                    <p>Postgres</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/redis.png"></img>
+                                    <p>Redis</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/0_s9ofuA0fj3NXfM_9-removebg-preview.png"></img>
+                                    <p>Kafka</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/integrations-rabbitmq-removebg-preview-removebg-preview.png"></img>
+                                    <p>RabbitMQ</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/activemq_logo_white_vertical.png"></img>
+                                    <p>ArtemisMQ</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/javascript.png"></img>
+                                    <p>Java Sricpt</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/vuejs.png"></img>
+                                    <p>VueJS</p>
+                                </li>
+                                <li class="item">
+                                    <img src="./assests/logo-react.svg"></img>
+                                    <p>ReactJS</p>
+                                </li>
+                            </ul>
+                        </footer>
+                    </article>
                 </section>
                 <section class="options">
                     <input class="menu_input" type="radio" name="opcao" id="exp"  />
@@ -25,8 +91,7 @@
                         <img class="menu_logo" src="./assests/experiment.svg" alt="Sobre">
                         <p>Experiencias</p>
                     </label>
-                    <article class="board">
-                    </article>
+                    
                 </section>
                 <section class="options">
                     <input class="menu_input" type="radio" name="opcao" id="edu"  />
