hover and change board

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul id="menu">
             <li class="options">
                 <input class="option" type="radio" name="opcao" id="about" checked />
-                <label class="option_container label_box" for="about">
+                <label class="option_box box_content" for="about">
                     <img class="logo" src="./assests/person.svg" alt="Sobre">
                     <p>Sobre</p>
                 </label>
@@ -88,7 +88,7 @@
             </li>
             <li class="options">
                 <input class="option" type="radio" name="opcao" id="exp"  />
-                <label class="option_container label_box" for="exp">
+                <label class="option_box box_content" for="exp">
                     <img class="logo" src="./assests/experiment.svg" alt="Sobre">
                     <p>Experiencias</p>
                 </label>
@@ -96,14 +96,14 @@
             </li>
             <li class="options">
                 <input class="option" type="radio" name="opcao" id="edu"  />
-                <label class="option_container label_box" for="edu">
+                <label class="option_box box_content" for="edu">
                     <img class="logo" src="./assests/education.svg" alt="Sobre">
                     <p>Educação</p>
                 </label>
             </li>
             <li class="options">
                 <input class="option" type="radio" name="opcao" id="cert" />
-                <label class="option_container label_box" for="cert">
+                <label class="option_box box_content" for="cert">
                     <img class="logo" src="./assests/certificate.svg" alt="Sobre">
                     <p>Certificados</p>
                 </label>
