--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <input class="option" type="radio" name="opcao" id="about" checked />
                 <label class="option_box box_content" for="about">
                     <img class="logo" src="./assests/person.svg" alt="Sobre">
-                    <p>Sobre</p>
+                    <p class="option_name">Sobre</p>
                 </label>
                 <section class="board">
                     <header>
