--- a/index.html
+++ b/index.html
@@ -92,7 +92,73 @@
                     <img class="logo" src="./assests/experiment.svg" alt="Sobre">
                     <p>Experiencias</p>
                 </label>
-                
+                <section class="board">
+                    <header>
+                        <span class="title">
+                            <p>E</p>xperiencias
+                        </span>
+                    </header>
+                    <main class="list_exps">
+                        <ul class="exps">
+                            <li class="exp">
+                                <span class="title">
+                                    <p>N</p>anodata 
+                                </span>
+                                <p class="date"> Jun/2019 – out/2020 <p>
+                                <article>
+                                    Projeto Interno,<br>
+                                    Uma web aplicação voltada controle e compartilhamento de
+                                    documentos ficais e outros. As ferramentos usadas foram:<br>
+                                    -Java Spring para requisições rest.<br>
+                                    -Maven<br>
+                                    -Postgres e JDBC.<br>
+                                    -VueJS + Quasar framework frontend.<br>
+                                    Projeto Externo<br>
+                                    Aplicação Java lê XML e integra os dados dentro no SAP. As
+                                    ferramentos usados foram:<br>
+                                    - Java Spring Boot<br>
+                                    - Maven<br>
+                                    - SAP Jco<br>
+                                </article>
+                            </li>
+                            <li class="exp">
+                                <span class="title">
+                                    <p>P</p>ICPAY SERVICOS S.A. Java Developer 
+                                </span>
+                                <p class="date"> Jun/2021 – Mar/2022 <p>
+                                <article>
+                                    Projeto Interno<br>
+                                    Aplicação Java utilizando:<br>
+                                    -Spring boot<br>
+                                    -Kafka<br>
+                                    -MongoDB<br>
+                                    -Redis<br>
+                                </article>
+                            </li>
+                            <li class="exp">
+                                <span class="title">
+                                    <p>I</p>BM - International Business Machines
+                                </span>
+                                <span>PICPAY SERVICOS S.A. Java Developer</span>
+                                <p class="date"> Maio/2022 – Fev/2023<p>
+                                <article>
+                                    Projeto Interno<br>
+                                    Aplicação Java utilizando:<br>
+                                    -Spring boot<br>
+                                    -Kafka<br>
+                                    -MongoDB<br>
+                                    -Redis<br>
+                                </article>
+                            </li>
+                            <li class="exp">
+                                <span class="title">
+                                    <p>N</p>anodata 
+                                </span>
+                                <p class="date"> Nov/2024 – Jan/2025 <p>
+                            </li>
+                        </ul>
+                    </main>
+                </section>
             </li>
             <li class="options">
                 <input class="option" type="radio" name="opcao" id="edu"  />
@@ -100,6 +166,7 @@
                     <img class="logo" src="./assests/education.svg" alt="Sobre">
                     <p>Educação</p>
                 </label>
+                <section class="board"></section>
             </li>
             <li class="options">
                 <input class="option" type="radio" name="opcao" id="cert" />
@@ -107,6 +174,85 @@
                     <img class="logo" src="./assests/certificate.svg" alt="Sobre">
                     <p>Certificados</p>
                 </label>
+                <section class="board">
+                    <header>
+                        <span class="title">
+                            <p>C</p>ertificados
+                        </span>
+
+                    </header>
+                    <main class="list_certs">
+                        <ul class="certs">
+                            <li class="cert">
+                                <span class="title">
+                                    <p>A</p>lura Cursos On-line
+                                </span>
+                                <p class="date"> 22/06/2018 - 04/01/2020 </p>
+                            </li>
+                            <article>
+                                -Design Patterns Java I: Boas práticas de programação (de 23/10/2018 a
+                                23/10/2018) 20hrs<br>
+                                -Orientação a Objetos: Melhores técnicas com Java (de 03/09/2019 a
+                                10/09/2019) 20hrs<br>
+                                -Mocks em Java: Testes de comportamentos automatizados (de 01/07/2019 a
+                                01/07/2019) 12hrs<br>
+                                -Teste de Integração: Testes SQL e DAOs automatizados em Java (de
+                                20/08/2019 a 19/09/2019) 12hrs<br>
+                                -Java e JPA: Otimizações com JPA2 e Hibernate (de 18/08/2019 a 28/10/2019)
+                                12hrs<br>
+                                -XStream: Consumindo o XML sem esforço (de 15/07/2019 a 15/07/2019) 12hrs
+                                -Java e JDBC: Trabalhando com um banco de dados (de 09/03/2019 a
+                                07/05/2019) 8hrs<br>
+                                -PHP e MySQL II: Cookies, sessões e mais recursos (de 05/11/2018 a 11/11/2018)
+                                12hrs<br>
+                                -Design Patterns Java II: Boas praticas de programação (de 11/07/2019 a
+                                14/07/2019) 16hrs<br>
+                                -PHP e MySQL I: Fundamentos para criar um sistema na Web (de 31/07/2018 a
+                                04/08/2018) 12hrs<br>
+                                -SOLID com Java: Orientação a Objetos com Java (de 18/08/2019 a 20/08/2019)
+                                8hrs<br>
+                                -Estrutura de Dados: Computação na prática com Java (de 15/02/2019 a
+                                21/02/2019) 12hrs<br>
+                                -Design Patterns PHP I: Boas práticas de programação (de 08/12/2018 a
+                                09/12/2018) 10hrs<br>
+                                -Algoritmos I: Selection, Insertion e Introdução a Análise (de 19/02/2019 a
+                                28/02/2019) 12hrs<br>
+                                -C II: Avançando na linguagem (de 03/04/2019 a 07/05/2019) 8hrs<br>
+                                -Clojure: uma introdução via jogo (de 04/07/2019 a 05/07/2019) 8hrs<br>
+                                -Spring MVC I: Criando aplicações web (de 12/03/2019 a 09/04/2019) 20hrs<br>
+                                -Spring MVC II: Integração, cache, segurança e templates (de 24/06/2019 a<br>
+                                26/06/2019) 15hrs<br>
+                                -Java e XML: integração, parsing e validação (de 10/02/2019 a 03/03/2019) 8hrs<br>
+                                -Threads em Java 1: Programação paralela (de 28/05/2019 a 29/05/2019) 16hrs<br>
+                                -Threads em Java 2: Programação concorrente avançada (de 18/07/2019 a
+                                04/08/2019) 16hrs<br>
+                                -PHP I: Orientação a objetos com sua linguagem preferida (de 28/11/2018 a
+                                04/12/2018) 12hrs<br>
+                                -PHP II: Avançando com Orientação a objetos (de 04/12/2018 a 08/12/2018)
+                                12hrs<br>
+                                -Spring Boot: Agilidade no desenvolvimento java com Spring (de 10/04/2019 a
+                                27/05/2019) 10hrs<br>
+                                -Java e JPA: Persista seus objetos com a JPA2 e Hibernate (de 28/06/2019 a
+                                12/07/2019) 17hrs<br>
+                                -Java Reflection parte 1: Entendendo a metaprogramação (de 17/07/2019 a
+                                03/09/2019) 8hrs<br>
+                                -Java Reflection parte 2: Anotações e Injeção de Dependências (de 19/09/2019
+                                a 19/09/2019) 12hrs<br>
+                                -Node.js Parte 1: Inovando com JavaScript no backend (de 06/12/2019 a
+                                10/12/2019) 12hrs<br>
+                                -Novidades Java: Produtividade com novos recursos (de 28/10/2019 a
+                                30/10/2019) 10hrs<br>
+                                -JavaScript: Conhecendo o Browser e padrões de projeto (de 14/11/2019 a
+                                19/11/2019) 12hrs<br>
+                                -JavaScript: Aprofundando em MVC, padrão Proxy e Factory (de 23/11/2019 a
+                                29/11/2019) 12hrs<br>
+                            </article>
+                        </ul>
+                        <article>
+
+                        </article>
+                    </main>
+                </section>
             </li>
         </ul>
         <article id="profile">
